service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ping-app
  namespace: ping-app
  labels:
    name: ping-app
spec:
  ports:
    - port: 80
      targetPort: 9001
      protocol: TCP
  type: NodePort
  selector:
    app: ping-app
